# ts_encoding_decoding

./: .gitignore  README.md  qtsa_00_data_2sin_analysis_v1.2.ipynb  qtsa_00_data_2sin_create_v1.2.py  qtsa_00_data_2sin_sw_analysis_v1.2.ipynb  qtsa_00_data_v1.0_2sin.ipynb  qtsa_00_data_v1.1_2sin_sw.ipynb  qtsa_01_linreg_v1.07_pre_qiskit_1.02.ipynb  qtsa_02_serial_pqft_v8.10.ipynb  qtsa_02_serial_pqft_v8.16_analysis_lay27_lbfgsb_ep39.ipynb  qtsa_02_serial_pqft_v8.16_train_lay27_lbfgsb_ep39.ipynb  qtsa_03_parallel_pqft_v8.10.ipynb  qtsa_03_parallel_pqft_v8.16_analysis_q5_lbfgsb_ep50.ipynb  qtsa_03_parallel_pqft_v8.16_train_q5_lbfgsb_ep50.ipynb  qtsa_04_qnn_v9.0.ipynb  qtsa_04_xqnn_v9.9_analysis_q9_lbfgsb_ep80.ipynb  qtsa_04_xqnn_v9.9_train_q9_lbfgsb_ep80.ipynb  qtsa_05_sliding_wind_v9.0.ipynb  qtsa_05_swind_v9.8_analysis_q3_lbfgsb_ep60.ipynb  qtsa_05_swind_v9.8_train_q3_lbfgsb_ep60.ipynb  qtsa_06_cnn_v2.2_train_lbfgsb_ep850.ipynb  qtsa_10_analysis_in_progress.ipynb  ts_demo_serial_pqft_random_shapes.ipynb  ts_qiskit_versions_and_issues.ipynb
ts-enc-dec/: Makefile  README.md  pyproject.toml  requirements.txt  session_store.db
ts-enc-dec/conf/base/: catalog.yml  parameters.yml
ts-enc-dec/notebooks/: qtsa_00_data_2sin_create_v1.2.ipynb  qtsa_00_data_2sin_sw_create_v1.2.ipynb  qtsa_00_data_2sin_sw_create_v1.2.py  qtsa_00_data_create.sh  qtsa_demo_random_shapes_serial_pqft.ipynb  qtsa_versions_and_issues.ipynb  test.ipynb
ts-enc-dec/notebooks/utils/: Tools.py
ts-enc-dec/src/ts_enc_dec/: __init__.py  __main__.py  pipeline_registry.py
utils/: Charts.py  Circuits.py  (+7 more)
(+272 files in other folders)
